# movie-scripts

./: .editorconfig  pyproject.toml
movie_scripts/cancel_schedule/: cancel_schedule.py
movie_scripts/cancel_schedule2/: cancel_schedule.py
movie_scripts/fix_movie_tags/: fix_movie_tags.py
movie_scripts/organizer/: organizer.py  syoboi_client.py
movie_scripts/register_encode/: register_encode.py  ts_information.py
movie_scripts/rename_succeed_files/: rename_succeed_files.py
