[tool.poetry]
name = "movie_scripts"
version = "0.1.0"
description = ""
authors = ["taka-hiroyuki <taka.hiroyuk@gmail.com>"]
readme = "README.md"
packages = [{ include = "movie_scripts" }]

[tool.poetry.dependencies]
python = "^3.10"
ariblib = "^0.0.5"
boto3 = "^1.24.88"
mypy = "^0.982"
boto3-stubs = {extras = ["s3"], version = "^1.24.88"}


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
taskipy = "^1.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.taskipy.tasks]
register_encode = "python movie_scripts/register_encode/register_encode.py"
fix_movie_tags = "python movie_scripts/fix_movie_tags/fix_movie_tags.py"
