[tool.poetry]
name = "movie_scripts"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "movie_scripts" }]

[tool.poetry.dependencies]
python = "^3.10"
ariblib = "^0.0.5"
boto3 = "^1.26.124"
requests = "^2.28.1"
pyav = "^12.0.4"
async-lru = "^2.0.4"
tzdata = "^2024.1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
taskipy = "^1.10.3"
mypy = "^1.6.1"
boto3-stubs = {extras = ["s3"], version = "^1.26.124"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.taskipy.tasks]
register_encode = "python movie_scripts/register_encode/register_encode.py"
fix_movie_tags = "python movie_scripts/fix_movie_tags/fix_movie_tags.py"
rename_succeed_files = "python movie_scripts/rename_succeed_files/rename_succeed_files.py"
cancel_schedule = "python movie_scripts/cancel_schedule/cancel_schedule.py"

[tool.poetry.scripts]
register_encode = "movie_scripts.register_encode.register_encode:run"
fix_movie_tags = "movie_scripts.fix_movie_tags.fix_movie_tags:run"
rename_succeed_files = "movie_scripts.rename_succeed_files.rename_succeed_files:run"
cancel_schedule = "movie_scripts.cancel_schedule.cancel_schedule:run"
cancel_schedule2 = "movie_scripts.cancel_schedule2.cancel_schedule:run"
